@@ -2,7 +2,6 @@
 - move load profile to task
 - use sprintf to display time in state
 
-- create airplane mode
 
 - switch profile/triggers sets (everything) based on time
 
