@@ -59,6 +59,7 @@
 				<TextView android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:paddingRight="5dp"
 					android:id="@+id/tvBluetooth" android:text="@string/labelBluetoothOn"></TextView>
+				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvAirplaneMode" android:text="@string/labelAirplaneModeOn"></TextView>
 
 			</LinearLayout>
 		</TableRow>
