@@ -1,3 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"><string name="labelAirplaneMode">Airplane mode</string>
+<string name="labelAirplaneModeOn">AP</string>
+	<string name="labelAirplaneModeOff">
+		<strike>AP</strike>
+	</string>
+	<string name="labelAirplaneModePrev">AP?</string>
 </resources>
