@@ -33,6 +33,7 @@ public class ProfileModel implements IGovernorModel {
 	private long virtualGovernor = -1;
 	private String script = "";
 	private int powersaveBias = 0;
+	private int airplainemodeState = 0;
 
 	public ProfileModel() {
 		super();
@@ -66,6 +67,7 @@ public class ProfileModel implements IGovernorModel {
 		this.virtualGovernor = c.getLong(DB.CpuProfile.INDEX_VIRTUAL_GOVERNOR);
 		this.script = c.getString(DB.CpuProfile.INDEX_SCRIPT);
 		this.powersaveBias = c.getInt(DB.CpuProfile.INDEX_POWERSEAVE_BIAS);
+		this.airplainemodeState = c.getInt(DB.CpuProfile.INDEX_AIRPLANEMODE_STATE);
 	}
 
 	public ProfileModel(Bundle bundle) {
@@ -94,6 +96,7 @@ public class ProfileModel implements IGovernorModel {
 		bundle.putLong(DB.CpuProfile.NAME_VIRTUAL_GOVERNOR, getVirtualGovernor());
 		bundle.putString(DB.CpuProfile.NAME_SCRIPT, getScript());
 		bundle.putInt(DB.CpuProfile.NAME_POWERSEAVE_BIAS, getPowersaveBias());
+		bundle.putInt(DB.CpuProfile.NAME_AIRPLANEMODE_STATE, getAirplainemodeState());
 	}
 
 	public void readFromBundle(Bundle bundle) {
@@ -113,6 +116,7 @@ public class ProfileModel implements IGovernorModel {
 		virtualGovernor = bundle.getLong(DB.CpuProfile.NAME_VIRTUAL_GOVERNOR);
 		script = bundle.getString(DB.CpuProfile.NAME_SCRIPT);
 		powersaveBias = bundle.getInt(DB.CpuProfile.NAME_POWERSEAVE_BIAS);
+		airplainemodeState = bundle.getInt(DB.CpuProfile.NAME_AIRPLANEMODE_STATE);
 	}
 
 	public void readFromJson(JSONBundle jsonBundle) {
@@ -132,6 +136,7 @@ public class ProfileModel implements IGovernorModel {
 		virtualGovernor = jsonBundle.getLong(DB.CpuProfile.NAME_VIRTUAL_GOVERNOR);
 		script = jsonBundle.getString(DB.CpuProfile.NAME_SCRIPT);
 		powersaveBias = jsonBundle.getInt(DB.CpuProfile.NAME_POWERSEAVE_BIAS);
+		airplainemodeState = jsonBundle.getInt(DB.CpuProfile.NAME_AIRPLANEMODE_STATE);
 	}
 
 	public ContentValues getValues() {
@@ -155,6 +160,7 @@ public class ProfileModel implements IGovernorModel {
 		values.put(DB.CpuProfile.NAME_VIRTUAL_GOVERNOR, getVirtualGovernor());
 		values.put(DB.CpuProfile.NAME_SCRIPT, getScript());
 		values.put(DB.CpuProfile.NAME_POWERSEAVE_BIAS, getPowersaveBias());
+		values.put(DB.CpuProfile.NAME_AIRPLANEMODE_STATE, getAirplainemodeState());
 		return values;
 	}
 
@@ -252,6 +258,7 @@ public class ProfileModel implements IGovernorModel {
 	public int hashCode() {
 		final int prime = 31;
 		int result = 1;
+		result = prime * result + airplainemodeState;
 		result = prime * result + backgroundSyncState;
 		result = prime * result + bluetoothState;
 		result = prime * result + ((gov == null) ? 0 : gov.hashCode());
@@ -279,6 +286,8 @@ public class ProfileModel implements IGovernorModel {
 		if (getClass() != obj.getClass())
 			return false;
 		ProfileModel other = (ProfileModel) obj;
+		if (airplainemodeState != other.airplainemodeState)
+			return false;
 		if (backgroundSyncState != other.backgroundSyncState)
 			return false;
 		if (bluetoothState != other.bluetoothState)
@@ -399,5 +408,13 @@ public class ProfileModel implements IGovernorModel {
 
 	public int getPowersaveBias() {
 		return powersaveBias;
+	}
+
+	public void setAirplainemodeState(int airplainemodeState) {
+		this.airplainemodeState = airplainemodeState;
+	}
+
+	public int getAirplainemodeState() {
+		return airplainemodeState;
 	}
 }
