@@ -1,6 +1,7 @@
 V 2.1.0
 * features
 - configurations: backupd/restore
+- switch airplane mode
 * bug fixes
 -
 
